🐛 FIX: Align classic editor images correctly (#160)

--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -5264,6 +5264,10 @@ footer * {
 	max-width: unset;
 }
 
+main img {
+	max-width: 100%;
+}
+
 html,
 body,
 div,
